# minimu

./: CMakeLists.txt  Dockerfile  README.md  cmakelists.txt  dockerfile  doxyfile
.github/workflows/: build.yml
include/minimu/: i2c_device.h  lis3mdl_magmeter.h  lis3mdl_regs_addr.h  lsm6_imu.h  lsm6_regs_addr.h  text_frame_builder.h
src/: i2c_device.hpp  lis3mdl_magnetometer.cpp  lsm6_imu.cpp  main.cpp  text_frame_builder.cpp
